--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,7 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/flornikz/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp -R images $DEPLOYPATH
+    - export DEPLOYPATH=/home/flornikz/travelAgency.scanini.tn/travelAgency.scanini.tn
+
+
+
